--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <!-- Menu Button -->
             <input class="menu-button" type="checkbox" id="menu-button"/>
-            <label class="hamburger" for="menu-button"><span class="hamburger_line"></span></label>
+            <label class="hamburger" for="menu-button"><span class="hamburger-line"></span></label>
             
             <!-- Navigation Links -->
             <nav class="navbar">
