--- a/index.html
+++ b/index.html
@@ -94,63 +94,63 @@
                     <span>98%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="98";></meter>
+                    <meter min="0" max="100" value="98"></meter>
                 </div>
                 <!-- Leadership -->
                 <h5 class="skill">Leadership
                     <span>93%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="93";></meter>
+                    <meter min="0" max="100" value="93"></meter>
                 </div>
                 <!-- Technology Strategy -->
                 <h5 class="skill">Technology Strategy
                     <span>95%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="95";></meter>
+                    <meter min="0" max="100" value="95"></meter>
                 </div>
                 <!-- Cloud -->
                 <h5 class="skill">Cloud
                     <span>98%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="98";></meter>
+                    <meter min="0" max="100" value="98"></meter>
                 </div>
                 <!-- DevSecOps/Platform Engineering -->
                 <h5 class="skill">DevSecOps/Platform Engineering
                     <span>88%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="88";></meter>
+                    <meter min="0" max="100" value="88"></meter>
                 </div>
 
                 <h5 class="skill">Cybersecurity
                     <span>85%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="85";></meter>
+                    <meter min="0" max="100" value="85"></meter>
                 </div>
                 <!-- Networking -->
                 <h5 class="skill">Networking
                     <span>95%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="95";></meter>
+                    <meter min="0" max="100" value="95"></meter>
                 </div>
                 <!-- Virtualization -->
                 <h5 class="skill">Virtualization
                     <span>95%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="95";></meter>
+                    <meter min="0" max="100" value="95"></meter>
                 </div>
                 <!-- Programming -->
                 <h5 class="skill">Programming
                     <span>70%</span>
                 </h5>
                 <div class="meter">
-                    <meter min="0" max="100" value="70";></meter>
+                    <meter min="0" max="100" value="70"></meter>
                 </div>
             </div>
         </div>
